Fixed error visibility

--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -7,5 +7,5 @@
   line-height: 15px;
   color: #FF0000;
   min-height: 30px;
-  visibility: visible;
+  visibility: hidden;
 }
